# Discord-Bot

./: .gitignore  Cargo.toml  README.md
src/: command.rs  event_handler.rs  main.rs
src/commands/: ping.rs
src/events/: ready.rs
