[package]
name = "Discord-Bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.4" }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
inventory = "0.3"
once_cell = "1.18"
dotenv = "0.15"
